Config refactor & clean-up

--- a/src/OfficeNotifications.Web/Pages/Notifications.razor
+++ b/src/OfficeNotifications.Web/Pages/Notifications.razor
@@ -43,7 +43,8 @@ else
         {
             if (notifications.Count() == 0)
             {
-                <p>No notifications for Teams or Outlook. When you get an email or Teams message, you'll see this change.</p>
+                <ul><li>No notifications for Teams or Outlook. When you get an email or Teams message, you'll see this change.</li></ul>
+                
             }
             else
             {
