--- a/src/OfficeNotifications.Web/Shared/NavMenu.razor
+++ b/src/OfficeNotifications.Web/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">OfficeNotifications.Web</a>
+        <a class="navbar-brand" href="">Office 365 Notifications</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
